manifests/ingress-gke-WIP/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
  name: helloworld-grpc
